--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,14 @@
         android:layout_marginTop="20dp"
         android:text="Send" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText3"
+        android:layout_below="@+id/editText3"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="20dp"
+        android:text="Reset" />
+
 </RelativeLayout>
